@@ -7,6 +7,7 @@ New features
 Bug fixes
 ~~~~~~~~~
 - #2293: Merging logic for <title>
+- #2428: Dynamic setting of language attributes
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - 
